Fix the imports and formatting